--- a/Angular-Form-Builder/angular.json
+++ b/Angular-Form-Builder/angular.json
@@ -31,6 +31,8 @@
               "src/assets"
             ],
             "styles": [
+              "src/styles.scss",
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
             "scripts": []
